force-app/main/default/objects/Plot_Location__c/Plot_Location__c.object-meta.xml
<CustomObject>
    <label>Plot Location</label>
    <nameField>
        <label>Plot Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plot Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>