force-app/main/default/objects/Plot_Location__c/fields/Enviroment__c.field-meta.xml
<CustomField>
    <fullName>Enviroment__c</fullName>
    <inlineHelpText>H, M, L</inlineHelpText>
    <label>Enviroment</label>
    <length>40</length>
    <type>Text</type>
</CustomField>