force-app/main/default/objects/Plot_Location__c/fields/Environmental_Quality_bu_ac__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Quality_bu_ac__c</fullName>
    <label>Environmental Quality (bu/ac)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>