force-app/main/default/objects/Plot_Location__c/fields/Exclusive__c.field-meta.xml
<CustomField>
    <fullName>Exclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will indicate if this plot is exclusive to optimize Explore processing speed.</description>
    <inlineHelpText>This will indicate if this plot is exclusive to optimize Explore processing speed.</inlineHelpText>
    <label>Exclusive</label>
    <type>Checkbox</type>
</CustomField>