force-app/main/default/objects/Plot_Location__c/fields/Fertilization__c.field-meta.xml
<CustomField>
    <fullName>Fertilization__c</fullName>
    <label>Fertilization</label>
    <length>10</length>
    <type>Text</type>
</CustomField>