force-app/main/default/objects/Plot_Location__c/fields/HT3__c.field-meta.xml
<CustomField>
    <fullName>HT3__c</fullName>
    <label>HT3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>