force-app/main/default/objects/Plot_Location__c/fields/idLocation__c.field-meta.xml
<CustomField>
    <fullName>idLocation__c</fullName>
    <description>Id From GDM Data Analytics Locations</description>
    <inlineHelpText>Id From GDM Data Analytics Locations</inlineHelpText>
    <label>idLocation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>