force-app/main/default/objects/Plot_Location__c/fields/Irrigation__c.field-meta.xml
<CustomField>
    <fullName>Irrigation__c</fullName>
    <label>Irrigation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>