force-app/main/default/objects/Plot_Location__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Plot Locations</relationshipLabel>
    <relationshipName>Plot_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>