force-app/main/default/objects/Plot_Location__c/fields/Map_Image__c.field-meta.xml
<CustomField>
    <fullName>Map_Image__c</fullName>
    <label>Map Image</label>
    <type>Url</type>
</CustomField>