force-app/main/default/objects/Plot_Location__c/fields/Maturity_Range__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Range__c</fullName>
    <label>Maturity Range</label>
    <length>40</length>
    <type>Text</type>
</CustomField>