force-app/main/default/objects/Plot_Location__c/fields/Maturity_Range_Max__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Range_Max__c</fullName>
    <label>Maturity Range Max</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>