force-app/main/default/objects/Plot_Location__c/fields/Parking_Lot_Location__c.field-meta.xml
<CustomField>
    <fullName>Parking_Lot_Location__c</fullName>
    <inlineHelpText>This GPS coordinate will be used in GDM Explore for the Navigation feature. This should be the GPS that we set for the user to park their car - Not the First Plot GPS.</inlineHelpText>
    <label>Parking Lot Location</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>