force-app/main/default/objects/Plot_Location__c/fields/Plant_Date__c.field-meta.xml
<CustomField>
    <fullName>Plant_Date__c</fullName>
    <label>Plant Date</label>
    <type>Date</type>
</CustomField>