force-app/main/default/objects/Plot_Location__c/fields/Plot_Group__c.field-meta.xml
<CustomField>
    <fullName>Plot_Group__c</fullName>
    <inlineHelpText>This field groups plot locations together that are in the same City/State, but still separate plots.
In GDM Explore, this will allow users to schedule a visit to the 1 Active plot and subsequently also schedule a visit to all the other Inactive plots within the same group.</inlineHelpText>
    <label>Plot Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>