force-app/main/default/objects/Plot_Location__c/fields/Plot_Group_of_Plots__c.field-meta.xml
<CustomField>
    <fullName>Plot_Group_of_Plots__c</fullName>
    <inlineHelpText>This number represents the number of Plots within a Plot Group. Should only be used for &quot;Fake Locations&quot; within a Plot Group</inlineHelpText>
    <label>Plot Group - # of Plots</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>