force-app/main/default/objects/Plot_Location__c/fields/Plot_Location_Region__c.field-meta.xml
<CustomField>
    <fullName>Plot_Location_Region__c</fullName>
    <formula>Location__r.County__r.Ag_District__r.Macroregion__r.Name</formula>
    <label>Plot Location Region</label>
    <type>Text</type>
</CustomField>