force-app/main/default/objects/Plot_Location__c/fields/Plot_Location_Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Plot_Location_Test_Type__c</fullName>
    <inlineHelpText>This field will be used as a Location Filter that will only be visible for Product Placement Accounts within the GDM Explore app.</inlineHelpText>
    <label>Plot Location Test Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>