force-app/main/default/objects/Plot_Location__c/fields/Plot_Map__c.field-meta.xml
<CustomField>
    <fullName>Plot_Map__c</fullName>
    <formula>IMAGE( Map_Image__c, &quot;Map&quot;, 300, 300)</formula>
    <label>Plot Map</label>
    <type>Text</type>
</CustomField>