force-app/main/default/objects/Plot_Location__c/fields/Plot_Outline__c.field-meta.xml
<CustomField>
    <fullName>Plot_Outline__c</fullName>
    <inlineHelpText>This will identify the points that are needed to build the polygon outline shape of the Explore Plot.
Enter set of GPS Coordinates per line.
Example:
34.123413, -90.12341234
34.123414, -90.12341235</inlineHelpText>
    <label>Plot Outline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>