force-app/main/default/objects/Plot_Location__c/fields/PP_Plot_Location_Region__c.field-meta.xml
<CustomField>
    <fullName>PP_Plot_Location_Region__c</fullName>
    <formula>Location__r.County__r.Ag_District__r.Product_Placement_Macroregion__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PP Plot Location Region</label>
    <type>Text</type>
</CustomField>