force-app/main/default/objects/Plot_Location__c/fields/Previous_crop__c.field-meta.xml
<CustomField>
    <fullName>Previous_crop__c</fullName>
    <label>Previous Crop</label>
    <length>40</length>
    <type>Text</type>
</CustomField>