force-app/main/default/objects/Plot_Location__c/fields/QR_Image__c.field-meta.xml
<CustomField>
    <fullName>QR_Image__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=150x150&amp;cht=qr&amp;choe=UTF-8&amp;chl=&apos; &amp; CASESAFEID(Id),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Image</label>
    <type>Text</type>
</CustomField>