force-app/main/default/objects/Plot_Location__c/fields/QR_List_Image__c.field-meta.xml
<CustomField>
    <fullName>QR_List_Image__c</fullName>
    <label>QR List Image</label>
    <type>Url</type>
</CustomField>