force-app/main/default/objects/Plot_Location__c/fields/QR_Range__c.field-meta.xml
<CustomField>
    <fullName>QR_Range__c</fullName>
    <label>QR Range</label>
    <length>40</length>
    <type>Text</type>
</CustomField>