force-app/main/default/objects/Plot_Location__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <inlineHelpText>2020, 2019, 2018, 2017, 2016</inlineHelpText>
    <label>Season</label>
    <length>40</length>
    <type>Text</type>
</CustomField>