force-app/main/default/objects/Plot_Location__c/fields/Soil_Type__c.field-meta.xml
<CustomField>
    <fullName>Soil_Type__c</fullName>
    <label>Soil Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clay</fullName>
            </value>
            <value>
                <fullName>Clay Loam</fullName>
            </value>
            <value>
                <fullName>Loam</fullName>
            </value>
            <value>
                <fullName>Loamy Sand</fullName>
            </value>
            <value>
                <fullName>Mineral</fullName>
            </value>
            <value>
                <fullName>Mineral Organic</fullName>
            </value>
            <value>
                <fullName>Sand</fullName>
            </value>
            <value>
                <fullName>Sandy Clay</fullName>
            </value>
            <value>
                <fullName>Sandy Loam</fullName>
            </value>
            <value>
                <fullName>Silt</fullName>
            </value>
            <value>
                <fullName>Silt Loam</fullName>
            </value>
            <value>
                <fullName>Silty Clay</fullName>
            </value>
            <value>
                <fullName>Silty Clay Loam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>