force-app/main/default/objects/Plot_Location__c/fields/Spacing_Rows__c.field-meta.xml
<CustomField>
    <fullName>Spacing_Rows__c</fullName>
    <label>Spacing Rows</label>
    <length>10</length>
    <type>Text</type>
</CustomField>