force-app/main/default/objects/Plot_Location__c/fields/Stand_Density__c.field-meta.xml
<CustomField>
    <fullName>Stand_Density__c</fullName>
    <label>Stand Density</label>
    <length>20</length>
    <type>Text</type>
</CustomField>