force-app/main/default/objects/Plot_Location__c/fields/START_HERE_QR__c.field-meta.xml
<CustomField>
    <fullName>START_HERE_QR__c</fullName>
    <inlineHelpText>This is the QR code assigned to the Start Here for this Plot Location</inlineHelpText>
    <label>START HERE QR</label>
    <length>40</length>
    <type>Text</type>
</CustomField>