force-app/main/default/objects/Plot_Location__c/fields/Test_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Name__c</fullName>
    <inlineHelpText>PP Only - Wiull identify the type of test that is being used at that location.DM, Explore, Research</inlineHelpText>
    <label>Test Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>