force-app/main/default/objects/Plot_Location__c/fields/Traits__c.field-meta.xml
<CustomField>
    <fullName>Traits__c</fullName>
    <label>Traits</label>
    <length>40</length>
    <type>Text</type>
</CustomField>