force-app/main/default/objects/Plot_Location__c/fields/User_Type_Visibility__c.field-meta.xml
<CustomField>
    <fullName>User_Type_Visibility__c</fullName>
    <label>User Type Visibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Product Placement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>