force-app/main/default/objects/Plot_Location__c/fields/Variety_QR_List__c.field-meta.xml
<CustomField>
    <fullName>Variety_QR_List__c</fullName>
    <formula>IMAGE( QR_List_Image__c, &quot;Map&quot;, 300, 300)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variety QR List</label>
    <type>Text</type>
</CustomField>