force-app/main/default/objects/Plot_Location__c/fields/VIP_Explore_Plot__c.field-meta.xml
<CustomField>
    <fullName>VIP_Explore_Plot__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this Checkbox will signify that the Explore plot is a VIP Explore Plot - VIP Explore plot means a larger selection of varieties to see</inlineHelpText>
    <label>VIP Explore Plot</label>
    <type>Checkbox</type>
</CustomField>