force-app/main/default/objects/Plot_Location__c/listViews/All_plot_Locations_2021.listView-meta.xml
<ListView>
    <fullName>All_plot_Locations_2021</fullName>
    <columns>NAME</columns>
    <columns>Season__c</columns>
    <columns>START_HERE_QR__c</columns>
    <columns>Active__c</columns>
    <columns>Source__c</columns>
    <columns>Status__c</columns>
    <columns>idLocation__c</columns>
    <columns>Traits__c</columns>
    <columns>Plot_Outline__c</columns>
    <columns>Plot_Location_Test_Type__c</columns>
    <columns>Test_Name__c</columns>
    <columns>Maturity_Range__c</columns>
    <columns>Harvest_Date__c</columns>
    <columns>Irrigation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Season__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <label>All plot Locations 2021</label>
</ListView>