force-app/main/default/objects/Plot_Location__c/listViews/Plot_Locations_2021_in_Explore_Custo.listView-meta.xml
<ListView>
    <fullName>Plot_Locations_2021_in_Explore_Custo</fullName>
    <columns>Season__c</columns>
    <columns>NAME</columns>
    <columns>START_HERE_QR__c</columns>
    <columns>Source__c</columns>
    <columns>Country__c</columns>
    <columns>Active__c</columns>
    <columns>Status__c</columns>
    <columns>Traits__c</columns>
    <columns>Test_Name__c</columns>
    <columns>GeoLocation__Latitude__s</columns>
    <columns>GeoLocation__Longitude__s</columns>
    <columns>Plot_Location_Region__c</columns>
    <columns>Maturity_Range__c</columns>
    <columns>Harvest_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Season__c</field>
        <operation>contains</operation>
        <value>2021</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>United States</value>
    </filters>
    <label>Plot Locations 2021 in Explore Customers</label>
</ListView>